src/test/ui/rfc-2093-infer-outlives/projection.stderr
error: rustc_outlives
  --> $DIR/projection.rs:4:1
   |
LL | / struct Foo<'a, T: Iterator> {
LL | |     bar: &'a T::Item
LL | | }
   | |_^
   |
   = note: <T as std::iter::Iterator>::Item : 'a

error: aborting due to previous error

