src/test/ui/rfc-2093-infer-outlives/projection.rs
#![feature(rustc_attrs)]
#![feature(infer_outlives_requirements)]

#[rustc_outlives]
struct Foo<'a, T: Iterator> { //~ ERROR rustc_outlives
    bar: &'a T::Item
}

fn main() {}

